@@ -15,3 +15,15 @@ application {
     // Define the main class for the application.
     mainClass = 'it.unicam.cs.pa.swarmsimulator.app.App'
 }
+
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(Test).configureEach {
+    jvmArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec).configureEach {
+    jvmArgs += "--enable-preview"
+}
